fix spacing

--- a/css/main.css
+++ b/css/main.css
@@ -4663,5 +4663,5 @@ h2 .how-it-works, p .how-it-works {
 }
 
 .testimonial {
-  padding-bottom: 4.0625em;
+  padding-bottom: 8.0625em;
 }
